--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,7 +1,7 @@
 ---
 key: 3
-title: Contact
-permalink: /contact/
+title: 文章
+permalink: /文章/
 options: nolanding
 excerpt: Get in touch
 background-image: caustic_light.jpg
