--- a/_pages/works.html
+++ b/_pages/works.html
@@ -1,7 +1,7 @@
 ---
 key: 1
-title: Works
-permalink: /works/
+title: 信息可视化作品集
+permalink: /信息可视化作品集/
 excerpt: The portfolio&mdash;things I enjoyed creating
 image: pic02.jpg
 background-image: pic02.jpg
@@ -15,16 +15,16 @@ if site.social.linkedin-square %}
 </div>{%
 endif %}
 {%
-if site.categories.works %}
+if site.categories.信息可视化作品集 %}
 <div class="table-wrapper">
   <table>
     <tbody>{%
-      include fn_groupsort_reverse.html unsorted=site.categories.works groupby='priority' sortby='date'
+      include fn_groupsort_reverse.html unsorted=site.categories.信息可视化作品集 groupby='priority' sortby='date'
 %}{%  for work in sorted_list %}
       <tr>
-        <td><b><a href="{{ work.url | prepend: site.baseurl }}">{{ work.title }}</a></b></td>
-        <td>{{ work.date | date: "%b %Y" }}</td>
-        <td>{{ work.excerpt | strip_html | truncatewords: 12 }}</td>
+        <td><b><a href="{{ 信息可视化作品集.url | prepend: site.baseurl }}">{{ 信息可视化作品集.title }}</a></b></td>
+        <td>{{ 信息可视化作品集.date | date: "%b %Y" }}</td>
+        <td>{{ 信息可视化作品集.excerpt | strip_html | truncatewords: 12 }}</td>
         <td>
           {% include techlist.html %}
         </td>
@@ -33,8 +33,8 @@ if site.categories.works %}
     </tbody>
   </table>
 </div>{%
-  if site.works_in_progress %}
-  <div class="works_inprogress">In-progress, more to come.</div>{%
+  if site.信息可视化作品集_in_progress %}
+  <div class="信息可视化作品集_inprogress">In-progress, more to come.</div>{%
   endif %}{%
 endif
 %}
